--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,50 @@
     }
 } 
 
+
+
+/* styles.css */
+
+/* Estilo del banner de cookies */
+.cookie-banner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 15px;
+    text-align: center;
+    font-size: 14px;
+    display: none; /* Ocultar inicialmente */
+    z-index: 1000;
+}
+
+.cookie-banner-content p {
+    margin: 0;
+    font-size: 18px;
+}
+
+.cookie-btn {
+    background-color: var(--accent-color);
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 20px;
+    border-radius: 5px;
+}
+
+.cookie-btn:hover {
+    background-color: #45a049;
+}
+
+.cookie-banner a {
+    color: var(--accent-color);
+    text-decoration: none;
+}
+
+.cookie-banner a:hover {
+    text-decoration: underline;
+}
