--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,41 @@
 
 
 
+      /* Estilos para el loader */
+      #loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(56, 56, 56, 1); /* Fondo semi-transparente */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999; /* Asegura que esté encima de todo el contenido */
+      }
+  
+      /* Animación del loader */
+      .loader-spinner {
+        border: 10px solid #ffffff;
+        border-top: 10px solid var(--accent-color);
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        animation: spin 3s linear infinite; /* Animación que hace girar el círculo */
+      }
+  
+      /* Animación de giro */
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+  
+      /* Estilos para el contenido de la página */
+      #content {
+        display: none; /* El contenido está oculto mientras carga el loader */
+      }
+
 
 /* Cambiar el cursor 
 body {
