--- a/styles.css
+++ b/styles.css
@@ -16,18 +16,20 @@
 
 
 
-      /* Estilos para el loader */
-      #loader {
+       /* Estilos para el loader */
+       #loader {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(56, 56, 56, 1); /* Fondo semi-transparente */
+        background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
         display: flex;
         justify-content: center;
         align-items: center;
         z-index: 9999; /* Asegura que esté encima de todo el contenido */
+        transition: opacity 2s ease; /* Transición suave para el desvanecimiento */
+        opacity: 1; /* Inicialmente visible */
       }
   
       /* Animación del loader */
