--- a/styles.css
+++ b/styles.css
@@ -23,35 +23,61 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+        background-color: rgb(56, 56, 56, 1); /* Fondo semi-transparente */
         display: flex;
         justify-content: center;
         align-items: center;
         z-index: 9999; /* Asegura que esté encima de todo el contenido */
-        transition: opacity 2s ease; /* Transición suave para el desvanecimiento */
+        transition: opacity 3s ease; /* Transición suave para el desvanecimiento */
         opacity: 1; /* Inicialmente visible */
       }
+
+
+/* HTML: <div class="loader"></div> */
+.loader-spinner {
+    --d:30px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    color: var(--accent-color);
+    box-shadow: 
+      calc(1*var(--d))      calc(0*var(--d))     0 0,
+      calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
+      calc(0*var(--d))      calc(1*var(--d))     0 2px,
+      calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
+      calc(-1*var(--d))     calc(0*var(--d))     0 4px,
+      calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
+      calc(0*var(--d))      calc(-1*var(--d))    0 6px;
+    animation: l27 0.7s infinite steps(100);
+  }
+  @keyframes l27 {
+    100% {transform: rotate(1turn)}
+  }
+
+
+
   
-      /* Animación del loader */
+      /* Animación del loader 
       .loader-spinner {
         border: 10px solid #ffffff;
         border-top: 10px solid var(--accent-color);
         border-radius: 50%;
         width: 100px;
         height: 100px;
-        animation: spin 3s linear infinite; /* Animación que hace girar el círculo */
+        animation: spin 3s linear infinite; /* Animación que hace girar el círculo 
       }
   
-      /* Animación de giro */
+      /* Animación de giro 
       @keyframes spin {
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
       }
   
-      /* Estilos para el contenido de la página */
+      /* Estilos para el contenido de la página 
       #content {
-        display: none; /* El contenido está oculto mientras carga el loader */
+        display: none; /* El contenido está oculto mientras carga el loader 
       }
+      */
 
 
 /* Cambiar el cursor 
